--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,11 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
+<properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+             <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
